fix: preserve node result route semantics